<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="@color/whiteGrey"
    tools:context="com.listdome.app.ui.TaskActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/element_toolbar" />

    <include
        android:id="@+id/navigation"
        layout="@layout/element_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_alignParentBottom="true" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:clipToPadding="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/navigation" >

        <LinearLayout
            android:id="@+id/container_tasks"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <android.support.v7.widget.CardView
                android:id="@+id/card_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="12dp"
                card_view:cardBackgroundColor="@color/lightSnow"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true" >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/title_todo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/lightGrey"
                        android:background="@drawable/background_corner"
                        android:text="@string/task_card_todo" />

                    <EditText
                        android:id="@+id/new_task"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/add_task"
                        app:layout_constraintTop_toBottomOf="@id/title_todo"
                        android:hint="@string/task_add_hint"
                        android:layout_margin="12dp"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:inputType="text"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:maxLines="1" />

                    <ImageButton
                        android:id="@+id/add_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/task_add_hint"
                        android:background="@drawable/ic_add"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_todo" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_todo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:scrollbars="vertical"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/new_task"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:listitem="@layout/item_todo" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_doing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="12dp"
                card_view:cardBackgroundColor="@color/lightSnow"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true" >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/title_doing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/lightGrey"
                        android:background="@drawable/background_corner"
                        android:text="@string/task_card_doing" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_doing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:scrollbars="vertical"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/title_doing"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:listitem="@layout/item_doing" />

                    <TextView
                        android:id="@+id/empty_view_doing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:layout_constraintTop_toBottomOf="@id/title_doing"
                        app:layout_constraintStart_toStartOf="parent"
                        android:padding="15dp"
                        android:textSize="16sp"
                        android:text="@string/no_tasks_available" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/card_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="12dp"
                card_view:cardBackgroundColor="@color/lightSnow"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/title_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/lightGrey"
                        android:background="@drawable/background_corner"
                        android:text="@string/task_card_done" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"
                        android:scrollbars="vertical"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/title_done"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:listitem="@layout/item_doing" />

                    <TextView
                        android:id="@+id/empty_view_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:layout_constraintTop_toBottomOf="@id/title_done"
                        app:layout_constraintStart_toStartOf="parent"
                        android:padding="15dp"
                        android:textSize="16sp"
                        android:text="@string/no_tasks_available" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
