<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/layout_done_task">

    <CheckBox
        android:id="@+id/check_done_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_done_task"
        app:layout_constraintStart_toStartOf="parent"  />

    <TextView
        android:id="@+id/text_done_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:padding="5dp"
        app:layout_constraintBaseline_toBaselineOf="@id/check_done_task"
        app:layout_constraintStart_toEndOf="@id/check_done_task"
        app:layout_constraintEnd_toStartOf="@+id/important_done_task"
        android:hint="@string/task_list_hint"
        android:textSize="18sp"
        android:maxLines="1" />

    <ImageButton
        android:id="@+id/important_done_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_star_empty"
        app:layout_constraintBaseline_toBaselineOf="@id/text_done_task"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
